# northstar-platform

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
agent/: .env.example  README.md  __init__.py  config.py  history.py  main.py  safety.py  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  c7ab6f6ff0eb_add_ai_engine_funding_research_rewards_.py
backend/app/: database.py  main.py
backend/app/api/: agent_router.py  ai_engines_router.py  auth_router.py  business_ideas_router.py  deps.py  funding_router.py  leads_router.py  outreach_router.py  research_router.py  rewards_router.py  stripe_router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: agent_audit.py  agent_config.py  ai_engine.py  business_idea.py  engine_message.py  funding.py  lead.py  outreach.py  platform_settings.py  research.py  reward.py  subscription.py  user.py
backend/app/schemas/: ai_engine.py  business_idea.py  engine_message.py  funding.py  lead.py  outreach.py  research.py  reward.py  user.py
backend/app/services/: agent_service.py  ai_analysis.py  auth_service.py  engine_communication.py  followup_generator.py  funding_strategy.py  lead_classifier.py  lead_score.py  lead_scraper.py  message_personalizer.py  outreach_service.py  outreach_writer.py  research_service.py  reward_service.py
backend/app/utils/: serpapi_client.py
backend/tests/: test_main.py  test_outreach_service.py
(+200 files in other folders)
