[tool.poetry]
name = "northstar-backend"
version = "0.4.0"
description = "NorthStar Consulting AI Platform Backend"
authors = ["NorthStar Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.2"
pydantic = {extras = ["email"], version = "^2.12.5"}
httpx = "^0.28.1"
python-multipart = "^0.0.22"
alembic = "^1.16.1"
openai = "^1.82.0"
stripe = "~11.4.1"
anthropic = "~0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
